src/test/ui/rfc-2632-const-trait-impl/super-traits-fail-2.yn.stderr
error[E0277]: the trait bound `T: ~const Foo` is not satisfied
  --> $DIR/super-traits-fail-2.rs:15:5
   |
LL |     x.a();
   |     ^ - required by a bound introduced by this call
   |     |
   |     the trait `~const Foo` is not implemented for `T`
   |
note: the trait `Foo` is implemented for `T`, but that implementation is not `const`
  --> $DIR/super-traits-fail-2.rs:15:5
   |
LL |     x.a();
   |     ^
help: consider further restricting this bound
   |
LL | const fn foo<T: Bar + ~const Foo>(x: &T) {
   |                     ++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
